# sudoku-dlx-solver

./: .gitignore  README.md
doc/: dlx_matrix_2x2.ods
js/: sudoku.js
notebooks/: sudoku2svg_usage_example.ipynb
python/dancing_links/: dlx_solver.py
python/dancing_links/sudoku/: sudoku.py  util.py
python/src/: sudoku_grid.py
scripts/: generate_valid_sudoku.sh
src/c/: .gitignore
src/c/dlx/: CMakeLists.txt  TODO.md  dlx.c  dlx_node_stack.c  dlx_util.c  main.c  sudoku.c
src/c/dlx/cmake/: criterion.gdb
src/c/dlx/include/: dlx.h  dlx_node_stack.h  dlx_types.h  dlx_util.h  sudoku.h
src/c/dlx/test/: CMakeLists.txt  test.c  test_bool_matrix_util.c  test_dlx_search.c  test_grid_creation.c  test_node_stack.c  test_sudoku_grid.c  test_sudoku_solver.c
src/c/dlx/test/include/util/: knut_paper_data.h  test_data.h  test_data_dlx.h  test_data_sudoku.h  test_util.h
src/c/dlx/test/util/: knut_paper_data.c  test_data.c  test_data_dlx.c  test_data_sudoku.c  test_util.c
src/python/dancing_links/: dlx_solver.py
src/python/dancing_links/sudoku/: sudoku.py  util.py
